--- a/src/view-finder.css
+++ b/src/view-finder.css
@@ -1,10 +1,9 @@
 .sm-ViewFinder {
-  position: fixed;
-  top: 100px;
-  left: 100px;
+  top: 5%;
+  left: 5%;
   cursor: crosshair;
-  border: 1px solid black;
-  background-color: rgba(255, 255, 255, 0.2);
+  outline: 1px solid black;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .sm-ViewFinder-box {
